--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,3 @@
 * {
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: Emoji,Cambria, Cochin, Georgia, Times, 'Times New Roman', serif,Arial, Helvetica, sans-serif
 }
